## Change log

### 1.4.1 - (in dev)
* Fix - Adding in the 'lsx_to_get_tour_itinerary_ids' to fix the order of the map IDS

### 1.4.0 - 19 December 2019
* Dev - Added in a parameter to lsx_to_enquire_modal() to allow a form_id to be specified
* Dev - Allowing the modal to be disabled in lsx_to_enquire_modal via a parameter
* Dev - Adding in an $args parameter to lsx_to_gallery(), allowing you to specify what 'gallery_ids' to use to build the gallery.
* Dev - Styles for single team page if banner is disabled.
* Dev - Set the region archive map to a zoom level of 10
* Dev - Enabled the sorting of Gallery images
* Dev - Added in a sticky order field to destinations to allow  sticky posts functionality
* Dev - Added in a "lsx_to_post_type_widget_query_args" to allow 3rd Party plugins to alter the queries.
* Dev - Added in an "orderby" parameter to the "lsx_to_connected_panel_query" helper function.
* Dev - Added in a 'lsx_to_js_params' filters which allows you to alter the JS params of the slick slider JS.
* Add - Added a filter `lsx_to_map_placeholder_enabled` for the maps placeholder to enable 3rd parties to change the toggle.
* Add - Added in a filter to `lsx_to_has_map()` to allow 3rd party functions to disable the map `lsx_to_disable_map`
* Add - Added in a filter to allow the disabling of the map JS `lsx_to_disable_map_js`
* Fix - Added in a function to clear the term cache when ordering, so the order reflects immediately.
* Fix - Fixing the returning variables of the destinations template tags.
* Fix - Fixed the Tour Itinerary not using the featured image for the departure day.
* Fix - Fixed the map JS file url.
* Fix - Restricted the map JS enqueue to only TO allowed pages.
* Fix - Removing the "wp-editor" dependency from the TO Block register function.
* Fix - Removing the flag-icons vendor CSS and Images.
* Fix - Fix for 'Content wider than screen' Google Console issue.
* Fix - Fixed the undefined notice when using and array of post types with WP_Query