@@ -239,6 +239,17 @@ function lsx_to_itinerary_thumbnail() {
 			}
 		}
 
+		// If it is the last day of the itinerary and there is no image, then use the featured image of the tour.
+		if ( $tour_itinerary->index === $tour_itinerary->count && ( false === $thumbnail_src || '' === $thumbnail_src ) ) {
+			$temp_id = get_post_thumbnail_id( $accommodation_id );
+			if ( false !== $temp_id ) {
+				$current_image_id = $tour_itinerary->find_next_image( $accommodation_id );
+				$temp_src_array   = wp_get_attachment_image_src( $current_image_id, 'lsx-thumbnail-square' );
+				if ( is_array( $temp_src_array ) ) {
+					$thumbnail_src = $temp_src_array[0];
+				}
+			}
+		}
 		$thumbnail_src = apply_filters( 'lsx_to_itinerary_thumbnail_src', $thumbnail_src, $tour_itinerary->index, $tour_itinerary->count );
 
 		// Check weather or not to display the placeholder.
